fix nav spacing again

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -23,6 +23,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 0.8fr 0.2fr;
     align-items: center;
+
+    border-radius: 100px;
 }
 
 #navbar-container .nav-element {
@@ -49,16 +51,29 @@
     padding: 10px 20px;
     background-color: var(--menu-bg-gunmetal);
     justify-content: space-between;
+    
+    border-radius: 100px;
 }
 
 #search-element input {
     background-color: transparent;
     font-size: 1rem;
     font-family: inherit;
+
+    flex-grow: 1;
+}
+
+#search-element button:hover {
+    background-color: transparent;
+}
+
+#search-element button {
+    cursor: pointer;
 }
 
 ul.nav-element {
-    justify-content: space-around;
+    gap: 20px;
+    padding: 0 40px;
 }
 
 a {
